--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,9 @@
-PORT=3000
-MONGO_URL=
+PORT= 3000
+MONGO_URL=<YOUR_MONGO_DB_URL>
+HOST=<YOUR_LOCAL_HOST_URL>
+DOMAIN=https://<YOUR_AUTH0_DOMAIN>
+CLIENTID=<YOUR_AUTH0_CLIENT_ID>
+CLIENTSECRET=<YOUR_AUTH0_CLIENT_SECRET>
+REDIRECTURI=<YOUR_CALLBACK_URL>
+AUDIENCE=https://<YOUR_AUTH0_DOMAIN>/api/v2/
+SCOPES= openid profile email offline_access
