--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,10 @@
-PORT= 3000
+PORT=3000
 MONGO_URL=<YOUR_MONGO_DB_URL>
 HOST=<YOUR_LOCAL_HOST_URL>
-DOMAIN=https://<YOUR_AUTH0_DOMAIN>
-CLIENTID=<YOUR_AUTH0_CLIENT_ID>
-CLIENTSECRET=<YOUR_AUTH0_CLIENT_SECRET>
-REDIRECTURI=<YOUR_CALLBACK_URL>
-AUDIENCE=https://<YOUR_AUTH0_DOMAIN>/api/v2/
-SCOPES= openid profile email offline_access
+AUTH0_DOMAIN=<AUTH0_YOUR_DOMAIN>
+AUTH0_CLIENT_ID=<YOUR_AUTH0_CLIENT_ID>
+AUTH0_CLIENT_SECRET=<YOUR_AUTH0_CLIENT_SECRET>
+AUTH0_REDIRECTURI=<YOUR_CALLBACK_URL>
+AUTH0_AUDIENCE=<YOUR_AUTH_DOMAIN>/api/v2/
+AUTH0_SCOPES= "openid profile email"
+AUTH0_JSON_WEB_KEY_SET= <YOUR_ATUH0_JSON_WEB_KEY_SET>
