--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/node-fetch": "^2.5.7",
     "@types/nunjucks": "^3.2.0",
     "@types/slug": "^5.0.2",
@@ -34,11 +35,11 @@
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^7.10.0",
-    "jest": "^26.4.2",
+    "jest": "^27.4.3",
     "nodemon": "2.0.15",
     "prettier": "^2.1.2",
-    "taiko": "^1.2.4",
-    "ts-jest": "^26.4.1",
+    "taiko": "^1.2.8",
+    "ts-jest": "^27.0.7",
     "ts-node": "9.1.1",
     "typescript": "4.5.2"
   }
