changing node image for CI unit tests

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -16,7 +16,7 @@ jobs:
           - 27017:27017
 
     container:
-      image:  node:14.8-buster
+      image:  node:16.13
 
     steps:
       - uses: actions/checkout@v2
