--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
-    "@types/node": "14.6.2",
+    "@types/node": "^17.0.21",
     "@types/nunjucks": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
