--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -14,7 +14,7 @@ jobs:
           - 27017:27017
 
     container:
-      image: buildkite/puppeteer:8.0.0
+      image: node:16.13-buster
 
     steps:
       - uses: actions/checkout@v2
