--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -14,7 +14,7 @@ jobs:
           - 27017:27017
 
     container:
-      image: buildkite/puppeteer:10.0.0
+      image: mcr.microsoft.com/playwright:focal
 
     steps:
       - uses: actions/checkout@v2
