--- a/package.json
+++ b/package.json
@@ -16,27 +16,27 @@
     "test:e2e": "jest --runInBand tests/e2e"
   },
   "dependencies": {
-    "dotenv": "10.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongodb": "^4.4.0",
+    "mongodb": "^4.4.1",
     "nunjucks": "^3.2.3",
-    "ts-node": "^10.5.0",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
-    "@types/nunjucks": "^3.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@types/nunjucks": "^3.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "devtools-protocol": "^0.0.977936",
-    "eslint": "^7.10.0",
-    "jest": "^27.4.3",
+    "eslint": "^8.10.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "taiko": "^1.2.8",
-    "ts-jest": "^27.0.7"
+    "ts-jest": "^27.1.3"
   },
   "eslintConfig": {
     "root": true,
